src/test/resources/scripts/language/parser/invalid/syntax/noStatementEnd.sbsc
// Parser should fail if there's no statement end

return false